[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcsb.exdb"
description = "RCSB Python ExDB data extraction and loading workflows"
readme = "README.md"
authors = [
    { name="John Westbrook", email="john.westbrook@rcsb.org" }
]
maintainers = [
    { name="Dennis Piehl", email="dennis.piehl@rcsb.org" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9,<3.13"  # Latest OpenEye (2025.1.1) only supports up to 3.12 (as of Nov. 2025)
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # OpenEye is needed here despite it not being a direct requirement of this package (it's used by rcsb.utils.chem)
    "OpenEye-toolkits >= 2024.1.1",
    #
    "numpy",
    "jsonschema >= 2.6.0",
    "rcsb.utils.io >= 1.48",
    "rcsb.db >= 1.808",
    "rcsb.utils.chem >= 0.84",
    "rcsb.utils.chemref >= 0.91",
    "rcsb.utils.config >= 0.40",
    "rcsb.utils.ec >= 0.25",
    "rcsb.utils.go >= 0.18",
    "rcsb.utils.seq >= 0.82",
    "rcsb.utils.targets >= 0.82",
    "rcsb.utils.struct >= 0.47",
    "rcsb.utils.taxonomy >= 0.43",
    "rcsb.utils.dictionary >= 1.27",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage", "rcsb.utils.citation >= 0.22"]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb_exdb"

# ----------------  hatch configuration ----------------
[tool.hatch.version]
path = "rcsb/exdb/cli/__init__.py"

[tool.hatch.build]
exclude = [
    "/rcsb/exdb/test*/**",
    "/rcsb/mock-*/**",
    "test*/**"
]

[tool.hatch.build.targets.sdist]
include = [
    "/rcsb/**",
    "/README.md",
    "/LICENSE",
    "/HISTORY.txt",
    "/pyproject.toml"
]

[tool.hatch.build.targets.wheel]
packages = ["rcsb"]

[tool.hatch.envs.default]
skip-install = true
dependencies = ["OpenEye-toolkits>=2024.1.1"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://pypi.anaconda.org/OpenEye/simple"


# ----------------  test configuration ----------------
[tool.hatch.envs.hatch-test]
dependencies = ["tox"]

[tool.hatch.envs.hatch-test.scripts]
run = ["tox"]


# ----------------  UV configuration ----------------
[tool.uv]
extra-index-url = ["https://pypi.anaconda.org/OpenEye/simple"]
managed = false  # This prevents uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
